fix: jump in liquidation chart

--- a/apps/platform/src/components/recharts/LiquidationChart/LiquidationChart.module.scss
+++ b/apps/platform/src/components/recharts/LiquidationChart/LiquidationChart.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 554px;
 }
 
 .legend {
